Fixed size of value issue on mobile and added swapping functionality

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ form input:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 #answer:hover {
     border: 0.01rem #46B1C9 solid;
@@ -107,6 +107,13 @@ form input:hover {
 #exchange-btn:hover {
     background-color: #44CCFF;
     cursor: pointer;
+}
+#swap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    padding-top: 1rem;
 }
 
 /* Media Queries For Smaller Display */
@@ -137,6 +144,11 @@ form input:hover {
     #answer {
         height: 2rem;
         margin: 1rem 0rem 1rem 0rem;
+        font-size: 0.75rem;
+    }
+    #swap {
+        cursor: pointer;
+        width: 1rem;
     }
 }
 
